--- a/SGE/Views/Home/Index.cshtml
+++ b/SGE/Views/Home/Index.cshtml
@@ -7,39 +7,37 @@
 
 }
 
-<div>
-    <div class="row my-5">
-        <div class="col-4">
+<div class="d-flex flex-wrap">
+    <div class="my-5 mx-auto row justify-content-between flex-wrap">
+        <div class="col-4 p-0 flex-wrap">
             <img src="https://placehold.co/400x500" />
         </div>
-        <div class="col-8">
-            <div class="px-4 py-4" style="background: #F6D524; height:250px;">
-                <h1 style="font-size:50px; color:#fff;">SGE - AppEscola</h1>
-                <p style="font-size:24px; color:#fff;">Banco de dados desenvolvido para gestão escolar. É uma ferramenta indispensável para otimizar a gestão escolar e melhorar a eficiência em todos os níveis de ensino. </p>
+        <div class="row col-8 justify-content-between flex-wrap">
+            <div class="px-5 py-4 w-100 col-8 mb-5" style="background: #F6D524;">
+                <h1 style="font-size:3.2rem; color:#fff;">SGE - AppEscola</h1>
+                <p style="font-size:1.5rem; color:#fff;">Banco de dados desenvolvido para gestão escolar. É uma ferramenta indispensável para otimizar a gestão escolar e melhorar a eficiência em todos os níveis de ensino. </p>
             </div>
-            <div class="row my-5 justify-content-between">
-                <div class="col">
-                    <p style="font-size:24px; color:#2E75D3; height:150px; border-top: 5px solid #f6d524;" class="py-3 me-1">Gerenciar eficientemente suas operações diárias, incluindo alunos, professores e funcionários</p>
+            <div class="col-6 justify-self-start p-0">
+                <p style="font-size:1.5rem; color:#2E75D3; border-top: 5px solid #f6d524;" class="py-3 me-1">Gerenciar eficientemente suas operações diárias, incluindo alunos, professores e funcionários</p>
 
-                </div>
-                <div class="col">
-                    <p style="font-size:24px; color:#2E75D3; height:150px; border-top: 5px solid #f6d524;" class="py-3 ms-4">Controlar reservas de salas, boletim de ocorrências, notas e calendários.</p>
-                </div>
+            </div>
+            <div class="col-6 justify-self-end p-0">
+                <p style="font-size:1.5rem; color:#2E75D3; border-top: 5px solid #f6d524;" class="py-3 ms-4">Controlar reservas de salas, boletim de ocorrências, notas e calendários.</p>
             </div>
         </div>
     </div>
-    <div class="row my-5 d-flex justify-content-between">
-        <button class="buttonAzul mx-2" style="width: 400px; height:200px;">
+    <div class="row justify-content-between col-12">
+        <button class="buttonAzul mx-1 my-1 col-3 align-self-auto" style="width:25.1rem; height:200px;">
             <svg bootstrap-icon="PlusSquare" width="50" height="50" aria-label="Pesquisar"></svg>
-            <p style="font-size:24px;" class="mt-3"> Cadastrar Aluno </p>
+            <p style="font-size:1.5rem;" class="mt-3"> Cadastrar Aluno </p>
         </button>
-        <button class="buttonAzul mx-2" style="width: 400px; height:200px;">
+        <button class="buttonAzul mx-1 my-1 col-3" style="width: 25.1rem; height:200px;">
             <svg bootstrap-icon="ArrowRightSquare" width="50" height="50" aria-label="Pesquisar"></svg>
-            <p style="font-size:24px;" class="mt-3"> Reservar Sala </p>
+            <p style="font-size:1.5rem;" class="mt-3"> Reservar Sala </p>
         </button>
-        <button class="buttonAzul mx-2" style="width: 400px; height:200px;">
+        <button class="buttonAzul mx-1 my-1 col-3" style="width: 25.1rem; height:200px;">
             <svg bootstrap-icon="PencilSquare" width="50" height="50" aria-label="Pesquisar"></svg>
-            <p style="font-size:24px;" class="mt-3"> Nova Ocorrência </p>
+            <p style="font-size:1.5rem;" class="mt-3"> Nova Ocorrência </p>
         </button>
     </div>
 </div>
