--- a/SGE/wwwroot/css/site.css
+++ b/SGE/wwwroot/css/site.css
@@ -145,13 +145,6 @@ body {
     height:fit-content;
 }
 
-/*Create Usuários*/
-
-.styleCreateUsuarios{
-    
-}
-
-
 /*Alunos*/
 .tableAlunosTop{
     display:flex;
@@ -162,9 +155,22 @@ body {
     margin: 2em 0em;
 }
 
+.tableAlunosTop ::placeholder{
+    color:white;
+}
+
 .tableAlunosTop h3{
     font-size:35px;
     font-weight: 400;
+}
+
+    .tableAlunosTop a {
+        margin-left: 12em;
+    }
+
+.tableAlunosTop input{
+    width:100%;
+
 }
 
 .tableAlunosTop input::placeholder{
